--- a/index.html
+++ b/index.html
@@ -37,26 +37,30 @@
   </aside>
   <section class="upcoming-episode">
     <div class="jumbotron">
-      <div class="jumbotron-image">
-      </div><!--end of jumbotron-image-->
+      <div class="jumbotron-image"></div><!--end of jumbotron-image-->
       <div class="jumbotron-content">
-        <h5>Próxima Meetup</h5>
-        <p class="label">Design</p>
-        <h3>André do Estaminé</h3>
-        <h4>Design</h4>
-        <p class="time-date">29.11.2018 19:30</p>
-        <p class="button">Eu Vou!</p>
+        <div class="content-a">
+          <h5>Próxima Meetup</h5>
+          <p class="label">Design</p>
+        </div>
+        <div class="content-b">
+          <h3>André do Estaminé</h3>
+          <h4>Design</h4>
+          <p class="time-date">29.11.2018 19:30</p>
+          <p class="button">Eu Vou!</p>
+        </div>
+        
       </div><!--end of jumbotron-content-->
     </div><!--end of jumbotron-->
     
     <div class="upcoming-episode-gradiant">
-      <p>UMA CONVERSA. UM PODCAST. UM PROJETO 97,6% FEITO EM PORTUGUÊS</p>
+      <h6>UMA CONVERSA. UM PODCAST. UM PROJETO 97,6% FEITO EM PORTUGUÊS</h6>
     </div>
    
     <p>#Mudo Podcast</p>
     <p>usa em todo o lado</p>
 
-  </section>
+  </section><!--end of upcoming-episode gradiant-->
   <section class="recent-episodes">
     <h2>Recentes</h2>
     <p class="button">Ver Todas</p>
