Footer: part 1/2 complete
Bottom Nav completed

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     </form> 
     </section>
     <aside class="social-media">
-      <ul>
-        <a href="#"><li>Email</li></a>
-        <a href="#"><li>Facebook</li></a>
-        <a href="#"><li>Instagram</li></a>
+      <ul class="bottom-nav">
+        <li><a href="#!"><h4>Email</h4></a></li>
+        <li><a href="#!"><h4>Facebook</h4></a></li>
+        <li><a href="#!"><h4>Instagram</h4></a></li>
       </ul>
 
     </aside>
