Sponsors section commit
sponsors section complete:
1. gradiant div
2. sponsor logo grid

--- a/index.html
+++ b/index.html
@@ -99,21 +99,67 @@
     <p class="button">Sobre Nos</p>
   </section>
   <section class="sponsors">
-    <p>deus lhes pague!</p>
-    <p>Somos um bando de tesos, e nunca conseguiremos pagar toda a ajuda que todos eles nos dão desde o momento zero. A todos o nosso bem-haja</p>
-    <img src="img/logos/gatovadio_logo.png" alt="Gatovadio Logo">
-    <img src="img/logos/180.png" alt="180 Logo">
-    <img src="img/logos/cru.png" alt="Cru Logo">
-    <img src="img/logos/idfportugal_logo.jpg" alt="IDF Portugal Logo">
-    <img src="img/logos/duas_de_letra_logo.jpg" alt="duas de letra Logo">
-    <img src="img/logos/manifesto_logo.jpg" alt="Manifesto Logo">
-    <img src="img/logos/mpagdp-logo.png" alt="mpagdp Logo">
-    <img src="img/logos/oupas.png" alt="oupas Logo">
-    <img src="img/logos/meat_logo.png" alt="Meat Logo">
-    <img src="img/logos/uiuxpt_logo.png" alt="uiuxpt Logo">
-    <img src="img/logos/espiga-1.jpg" alt="Espiga Logo">
-    <p class="button">Quero Apoiar</p>
-  </section>
+    <div class="sponsors-gradiant">
+      <div class="sponsors-gradiant-content">
+        <p class="paragraph-titles">deus lhes pague!</p>
+        <p>Somos um bando de tesos, e nunca conseguiremos pagar toda a ajuda que todos eles nos dão desde o momento zero. A todos o nosso bem-haja</p>
+      </div><!--end of sponsors-gradiant-content-->
+    </div><!--end of sponsors gradiant-->
+    <div class="sponsors-logos-container">
+      <div class="sponsors-logos-img">
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/cru.png" alt="Cru Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/oupas.png" alt="oupas Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/gatovadio_logo.png" alt="Gatovadio Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/meat_logo.png" alt="Meat Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/mpagdp-logo.png" alt="mpagdp Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/uiuxpt_logo.png" alt="uiuxpt Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/idfportugal_logo.jpg" alt="IDF Portugal Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/manifesto_logo.jpg" alt="Manifesto Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/espiga-1.jpg" alt="Espiga Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div> 
+          <img src="img/logos/duas_de_letra_logo.jpg" alt="duas de letra Logo">
+        </article>
+        <article class="company">
+          <div class="sponsors-logos-img-overlay"></div>
+          <img src="img/logos/180.png" alt="180 Logo">
+        </article>    
+      </div><!--end of sponsers-logos-img -->
+      <div class="sponser-button">
+        <p class="button">Quero Apoiar</p>
+      </div>
+     </div><!--end of sponsors-logos-container-->
+   
+
+
+  </section><!--end of sponsors section-->
   <footer>
     <section class="newsletter">
       <div class="newsletter-content">
