--- a/index.html
+++ b/index.html
@@ -93,11 +93,17 @@
   </section>
   <section class="bio">
     <h2>Quem Somos?</h2>
-    <img src ="img/people/grupo.png" alt="Mudo Podcast Group">
-    <h5>Somos os Melhores piores</h5>
-    <p>Descendentes de uma longa linhagem de aliens, primatas, fenicíos, vikings, inquisitores e conquistadores, somos uma equipa multidisciplinar, que se encontrou, pelas linhas das Parcas, na cidade do Porto, Portugal.</p>
-    <p class="button">Sobre Nos</p>
-  </section>
+    <div class="bio-container">
+      <div class="bio-content">
+        <p class="paragraph-titles">Somos os <em>Melhores</em> piores</p>
+        <p>Descendentes de uma longa linhagem de aliens, primatas, fenicíos, vikings, inquisitores e conquistadores, somos uma equipa multidisciplinar, que se encontrou, pelas linhas das Parcas, na cidade do Porto, Portugal.</p>
+        <p class="button">Sobre Nos</p>
+      </div><!--end of bio-content div-->
+      <div class="bio-image">
+        <img src ="img/people/grupo.png" alt="Mudo Podcast Group">
+      </div><!--end of bio image-->
+    </div><!--end of bio container-->
+  </section><!--end of bio-content section-->
   <section class="sponsors">
     <div class="sponsors-gradiant">
       <div class="sponsors-gradiant-content">
