spaces section completed

--- a/index.html
+++ b/index.html
@@ -85,12 +85,20 @@
   </section>
   <section class="spaces">
     <h2>Os Espaços</h2>
-    <p>Embaixada do Porto</p>
-    <img src="img/people/embporto-1092x720.png" alt="Embaixada do Porto space">
-    <p>Onde a conversa acontece</p>
-    <p>Mais que um podcast, é o local onde ele acontece. Uma boa conversa, merece um bom espaço, onde possa haver partilha, onde possa acolher. Mais, os espaços que acolhem o podcast são eles próprios um movimento, enriquecem o significado das ideias que são partilhadas. Descobre onde costumamos gravar, perdão, conversar.</p>
-    <p class="button">Ver Todos</p>
-  </section>
+    <div class="spaces-container">
+      <div class="spaces-content">
+        <p class="paragraph-titles">Onde a conversa acontece</p>
+        <p>Mais que um podcast, é o local onde ele acontece. Uma boa conversa, merece um bom espaço, onde possa haver partilha, onde possa acolher. Mais, os espaços que acolhem o podcast são eles próprios um movimento, enriquecem o significado das ideias que são partilhadas. Descobre onde costumamos gravar, perdão, conversar.</p>
+        <p class="button">Ver Todos</p>
+      </div><!--end of spaces content-->
+      <div class="spaces-image">
+        <img src="img/people/embporto-1092x720.png" alt="Embaixada do Porto space">
+      </div><!--end of spaces-image-->
+      <div class="spaces-label">
+        <p class="label">Embaixada do Porto</p>
+      </div><!--end of spaces-label-->
+    </div><!--end of spaces container-->
+  </section><!--end of spaces section-->
   <section class="bio">
     <h2>Quem Somos?</h2>
     <div class="bio-container">
