--- a/index.html
+++ b/index.html
@@ -42,47 +42,54 @@
         <div class="content-a">
           <h5>Próxima Meetup</h5>
           <p class="label">Design</p>
-        </div>
+        </div><!--end of content-a-->
         <div class="content-b">
           <h3>André do Estaminé</h3>
           <h4>Design</h4>
           <p class="time-date">29.11.2018 19:30</p>
           <p class="button">Eu Vou!</p>
-        </div>
-        
+        </div><!--end of content-b-->
       </div><!--end of jumbotron-content-->
     </div><!--end of jumbotron-->
     
     <div class="upcoming-episode-gradiant">
       <h6>UMA CONVERSA. UM PODCAST. UM PROJETO 97,6% FEITO EM PORTUGUÊS</h6>
     </div>
-   
-    <p>#Mudo Podcast</p>
-    <p>usa em todo o lado</p>
-
+    <div class="mudo-animation">
+      <div class="mudo-animation-content">
+        <h4>#Mudo Podcast</h4>
+        <h6>usa em todo o lado</h6>
+      </div><!--end of mudo animation content-->
+    </div><!--end of mudo-animation------->
   </section><!--end of upcoming-episode gradiant-->
   <section class="recent-episodes">
-    <h2>Recentes</h2>
-    <p class="button">Ver Todas</p>
-    <article class="episodes">
-      <img src="img/people/brunoamorim-960x540.jpg" alt="Bruno Amorim Photo">
-      <h4>Bruno Amorim</h4>
-      <p>Web com copy</p>
-      <p>15.11.2018 CRU Cowork</p>
-      <p class="button">Ouvir</p>
-      <i class="fas fa-play"></i>
-      <i class="fas fa-plus"></i>
-    </article>
-    <article class="episodes">
-      <img src="img/people/analuisasilva-1920x1080.jpg" alt="Ana Luisa Silva Photo">
-      <h4>Ana Luisa Silva</h4>
-      <p>Fotografia e Futebol</p>
-      <p>30.10.2018</p>
-      <p class="button">Ouvir</p>
-      <i class="fas fa-play"></i>
-      <i class="fas fa-plus"></i>
-    </article>
-  </section>
+    <div class="recent-episodes-header">
+      <h2>Recentes</h2>
+      <p class="button">Ver Todas</p>
+    </div><!--end of recent-episodes-header-->
+    <div class="episode-container">
+      <article id="bruno" class="episodes">
+        <div class="episodes-img"></div><!--end of episodes-img-->
+        <div class="episodes-content">
+          <p class="paragraph-titles">Bruno Amorim</p>
+          <p>Web com copy</p>
+          <p class="label">15.11.2018 CRU Cowork</p>
+          <p class="button">Ouvir <i class="fas fa-play"></i></p>
+          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
+        </div><!--end of episodes-content-->
+      </article><!--end of article 1-->
+      <article id="ana" class="episodes">
+        <div class="episodes-img"></div><!--end of episodes-img-->
+        <div class="episodes-content">
+          <p class="paragraph-titles">Ana Luisa Silva</p>
+          <p>Fotografia e Futebol</p>
+          <p class="label">30.10.2018</p>
+          <p class="button">Ouvir <i class="fas fa-play"></i></p>
+          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
+        </div><!--end of episodes-contnet-->
+      </article><!--end of ana luisa episode-->
+    </div><!--end of episode-container--------------------->
+  </section><!--end of recent episodes section-->
   <section class="spaces">
     <h2>Os Espaços</h2>
     <div class="spaces-container">
