in progress recentes section
I'm working on recentes section. I need to do some html restructuring and wanted to have a commit saved in case that gets out of control

--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
       <p class="button">Ver Todas</p>
     </div><!--end of recent-episodes-header-->
     <div class="episode-container">
+      <div class="episode-container-overlay">
+        <div class="label-container">
+          <p class="label">Design</p>
+        </div><!--end of label-container-->
+        <div class="podcast-button-set">
+          <p class="button">Ouvir <i class="fas fa-play"></i></p>
+          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
+        </div><!--end of podcast-button-set-->
+      </div><!--end of episode-container-overlay-->
       <article id="bruno" class="episodes">
         <div class="episodes-img"></div><!--end of episodes-img-->
         <div class="episodes-content">
           <p class="paragraph-titles">Bruno Amorim</p>
           <p>Web com copy</p>
           <p class="label">15.11.2018 CRU Cowork</p>
-          <p class="button">Ouvir <i class="fas fa-play"></i></p>
-          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
         </div><!--end of episodes-content-->
       </article><!--end of article 1-->
       <article id="ana" class="episodes">
