--- a/index.html
+++ b/index.html
@@ -68,33 +68,44 @@
       <p class="button">Ver Todas</p>
     </div><!--end of recent-episodes-header-->
     <div class="episode-container">
-      <div class="episode-container-overlay">
-        <div class="label-container">
-          <p class="label">Design</p>
-        </div><!--end of label-container-->
-        <div class="podcast-button-set">
-          <p class="button">Ouvir <i class="fas fa-play"></i></p>
-          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
-        </div><!--end of podcast-button-set-->
-      </div><!--end of episode-container-overlay-->
-      <article id="bruno" class="episodes">
-        <div class="episodes-img"></div><!--end of episodes-img-->
-        <div class="episodes-content">
-          <p class="paragraph-titles">Bruno Amorim</p>
-          <p>Web com copy</p>
-          <p class="label">15.11.2018 CRU Cowork</p>
-        </div><!--end of episodes-content-->
+      <article class="episode">
+        <div class="episode-container-overlay">
+          <div class="label-container">
+            <p class="label">Design</p>
+          </div><!--end of label-container-->
+          <div class="podcast-button-set">
+            <p class="button">Ouvir <i class="fas fa-play"></i></p>
+            <p class="button icon-plus"><i class="fas fa-plus"></i></p>
+          </div><!--end of podcast-button-set-->
+        </div><!--end of episode-container-overlay-->
+        <div id="bruno" class="episodes">
+          <div class="episodes-img"></div><!--end of episodes-img-->
+          <div class="episodes-content">
+            <p class="paragraph-titles">Bruno Amorim</p>
+            <p>Web com copy</p>
+            <p class="label">15.11.2018 CRU Cowork</p>
+          </div><!--end of episodes-content-->
+        </div><!--end of #bruno episodes-->
       </article><!--end of article 1-->
-      <article id="ana" class="episodes">
-        <div class="episodes-img"></div><!--end of episodes-img-->
-        <div class="episodes-content">
-          <p class="paragraph-titles">Ana Luisa Silva</p>
-          <p>Fotografia e Futebol</p>
-          <p class="label">30.10.2018</p>
-          <p class="button">Ouvir <i class="fas fa-play"></i></p>
-          <p class="button icon-plus"><i class="fas fa-plus"></i></p>
-        </div><!--end of episodes-contnet-->
-      </article><!--end of ana luisa episode-->
+      <article class="episode">
+        <div class="episode-container-overlay">
+          <div class="label-container">
+            <p class="label">Fotografia</p>
+          </div><!--end of label-container-->
+          <div class="podcast-button-set">
+            <p class="button">Ouvir <i class="fas fa-play"></i></p>
+            <p class="button icon-plus"><i class="fas fa-plus"></i></p>
+            </div><!--end of podcast-button-set-->
+        </div><!--end of episode-container-overlay-->
+        <div id="ana" class="episodes">
+          <div class="episodes-img"></div><!--end of episodes-img-->
+          <div class="episodes-content">
+            <p class="paragraph-titles">Ana Luisa Silva</p>
+            <p>Fotografia e Futebol</p>
+            <p class="label">30.10.2018</p>
+          </div><!--end of episodes-contnet-->
+        </div><!--end of #ana luisa episode-->
+    </article><!--end of article 2-->
     </div><!--end of episode-container--------------------->
   </section><!--end of recent episodes section-->
   <section class="spaces">
