Recentes section- spacing complete
Finally figured out how to space two episode divs. Completed this by adding a "offset-episode" class to article and added a justify-content: right declaration.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div><!--end of episodes-content-->
         </div><!--end of #bruno episodes-->
       </article><!--end of article 1-->
-      <article class="episode">
+      <article class="episode offset-episode">
         <div class="episode-container-overlay">
           <div class="label-container">
             <p class="label">Fotografia</p>
