mudo-animation commit
added @keyframes and completed mudo-animation

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <div class="line bottom"></div>
     </a>
   </header>
-  <aside class="award">
-    <img src="img/logos/cssda-special-kudos-white.png" alt="cssda awards badge">
+  <aside class="awards">
+    <a href="#" class="badge"><img src="img/logos/cssda-special-kudos-white.png" alt="cssda awards badge"></a>
   </aside>
   <section class="upcoming-episode">
     <div class="jumbotron">
@@ -75,7 +75,7 @@
       <article class="episode">
         <div class="episode-container-overlay">
           <div class="label-container">
-            <p class="label">Design</p>
+            <a href="#!" class="label">Design</a>
           </div><!--end of label-container-->
           <div class="podcast-button-set">
             <p class="button">Ouvir <i class="fas fa-play"></i></p>
@@ -94,7 +94,7 @@
       <article class="episode offset-episode">
         <div class="episode-container-overlay">
           <div class="label-container">
-            <p class="label">Fotografia</p>
+            <a href="#!" class="label">Fotografia</a>
           </div><!--end of label-container-->
           <div class="podcast-button-set">
             <p class="button">Ouvir <i class="fas fa-play"></i></p>
